# rm

./: .env.example  .gitignore  99_open_questions.md  PM_CONTEXT.md
03_build/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
03_build/api/: __init__.py  accounts.py  actions.py  analysis.py  auth_google.py  client_auth.py  client_chat.py  dispatch.py  inbox.py  main.py  profiles.py  submit.py  support.py  talent.py  webhooks.py
03_build/api/admin/: __init__.py  kill_switch.py  sync.py
03_build/api/middleware/: __init__.py  timeout.py
03_build/core/: __init__.py  db.py  sync_runner.py
03_build/core/actions/: __init__.py  queue.py  service.py
03_build/core/adapters/: __init__.py  base.py  calendar.py  chorus.py  episode.py  opportunity_tracker.py  sfdc.py  zoom.py
03_build/core/agent/: __init__.py  context.py  runner.py
03_build/core/analysis/: __init__.py  agent.py  analyst.py  evidence_pack.py  loop.py  priority.py  quant_signals.py  signal_catalog.py  store.py  validate.py
03_build/core/chorus/: sync.py
03_build/core/client/: email.py  otp.py
03_build/core/dispatch/: __init__.py  base.py  calendar_hold.py  email.py  sfdc_task.py
03_build/core/events/: __init__.py  log.py  queries.py  types.py
03_build/core/google/: account_matcher.py  auth.py  calendar_sync.py  gmail_sync.py
03_build/core/health/: __init__.py  dual_sided.py
03_build/core/inbox/: __init__.py  loop.py  reply.py  send.py  sync.py  threads.py
03_build/core/ingest/: __init__.py  pipeline.py
03_build/core/llm/: __init__.py  client.py  config.py  fallback.py  provider.py  rm_style.py
03_build/core/memory/: __init__.py  denylist.py  driver.py  graph.py  retrievers.py  types.py
03_build/core/outcomes/: __init__.py  watchers.py
03_build/core/policy/: __init__.py  decide.py  kill_switch.py  settings.py  types.py
03_build/core/profiles/: __init__.py  editor.py  loader.py  regenerator.py
03_build/core/salesforce/: __init__.py  auth.py  client.py  sync.py
03_build/core/signals/: __init__.py  account_silence_pattern_v1.py  base.py  churn_signal_competitor_mention_v1.py  churn_signal_contact_disengagement_v1.py  churn_signal_renewal_period_silence_v1.py  churn_signal_sentiment_decline_v1.py  client_termination_pattern_v1.py  escalation_signal_case_pattern_v1.py  escalation_signal_severity_jump_v1.py  expansion_signal_job_posting_match_v1.py  expansion_signal_verbal_capacity_mention_v1.py  recognition_signal_advocacy_candidate_v1.py  runtime.py  talent_burnout_signal_v1.py  talent_growth_concern_v1.py  (+1 more)
03_build/deploy/: Dockerfile.api  README.md  fly.api.toml
03_build/front/: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
03_build/migrations/: 0001_pulse_events.sql  0002_pulse_episodes.sql  0003_pulse_settings.sql  0004_associate_stage_history.sql  0005_expansion_intent_signals.sql  0006_pulse_profiles.sql  0007_pulse_account_health.sql  0008_dispatch_failed.sql  0009_episode_transcript.sql  0010_episode_recording_password.sql  0011_support_chat.sql  0012_client_otps.sql  0013_client_sessions.sql  0014_rm_style_profiles.sql  0015_client_conversations.sql
03_build/pulse_workflows/: expansion_intent_poll.json
03_build/scripts/: README.md  backfill_passwords.py  backfill_transcripts.py  bootstrap_sf_creds.py  db_migrate.py  harness_three_graph.py  outcome_watch.py  sfdc_bench.py
03_build/skills/: __init__.py  skill_01_detect_talent_signal.py  skill_02_prepare_customer_meeting_brief.py  skill_03_renewal_watcher.py  skill_04_talent_care.py  skill_05_escalation_router.py  skill_06_advocacy.py  skill_07_recognition.py  skill_08_onboarding.py  skill_09_coaching_signal_router.py  skill_10_cross_account_pattern_finder.py  skill_11_detect_expansion_intent.py
03_build/tests/: conftest.py  test_actions_api_db.py  test_actions_queue.py  test_adapter_contract.py  test_analysis_agent.py  test_analysis_analyst.py  test_analysis_evidence.py  test_analysis_priority.py  test_analysis_quant.py  test_analysis_signal_catalog.py  test_analysis_validate.py  test_calendar_adapter.py  test_calendar_adapter_db.py  test_chorus_adapter.py  test_client_auth.py  test_client_chat.py  test_client_otp.py  test_cross_account_retriever.py  test_dispatch.py  test_dispatch_db.py  test_dual_sided_health.py  test_dual_sided_health_db.py  test_events_db.py  test_events_payloads.py  test_health.py  test_inbox_reply.py  test_inbox_scopes.py  test_inbox_send.py  test_inbox_sync.py  test_inbox_threads.py  test_ingest_pipeline_db.py  test_llm_config.py  test_llm_fallback.py  test_memory_types.py  test_no_bare_kuzu_driver.py  test_opportunity_tracker_adapter.py  test_opportunity_tracker_adapter_db.py  test_outcomes.py  test_outcomes_db.py  test_policy.py  (+28 more)
(+300 files in other folders)
