[project]
name = "pulse"
version = "0.1.0"
description = "EDGE Pulse — agentic intelligence and action layer for Relationship Managers"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.5",
    # Memory layer (Graphiti × Kuzu — confirmed-GO Spike 3)
    "graphiti-core[kuzu,anthropic]>=0.29",
    # LLM
    "anthropic>=0.49",
    "openai>=1.91",          # embeddings only (text-embedding-3-small per Spike 3 §C)
    # Data
    "psycopg[binary]>=3.2",  # Supabase Postgres
    # Observability (ADR-003)
    "langfuse>=2.0",
    # Env
    "python-dotenv>=1.0",
    # HTTP for adapters / Activepieces callbacks
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E,F = pyflakes/pycodestyle; I = isort; ASYNC = flake8-async; B = bugbear
select = ["E", "F", "I", "ASYNC", "B", "UP"]
# ADR-001 discipline: async-everything. Ban blocking sleeps in app code.
# (Enforced additionally by a CI grep check for time.sleep in handlers.)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["api", "core", "scripts"]
exclude = ["**/__pycache__", "**/.venv"]
# No venvPath here: CI installs into the ambient runner Python (no .venv dir).
# For local runs use the project venv explicitly:
#   .venv/bin/pyright --pythonpath .venv/bin/python

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Flat layout: ship the runtime packages only (tests/ is not an installed package).
include = ["api*", "core*"]
